[package]
name = "first-flash-longan-nano"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
longan-nano = { version = "0.3.0", features = ["lcd"] }
embedded-graphics = "0.7.1"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
riscv = "0.7.0"
heapless = "0.7.7"